--- a/src/frontend/angular.json
+++ b/src/frontend/angular.json
@@ -58,6 +58,14 @@
                   "maximumError": "10kb"
                 }
               ]
+            },
+            "test": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.test.ts"
+                }
+              ]
             }
           }
         },
@@ -69,6 +77,17 @@
           "configurations": {
             "production": {
               "browserTarget": "frontend:build:production"
+            }
+          }
+        },
+        "serve-e2e": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "app1:build"
+          },
+          "configurations": {
+            "test": {
+              "browserTarget": "frontend:build:test"
             }
           }
         },
@@ -112,7 +131,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "frontend:serve"
+            "devServerTarget": "frontend:serve-e2e:test"
           },
           "configurations": {
             "production": {
